src/test/ui/parser/keyword-break-as-identifier.stderr
error: expected pattern, found keyword `break`
  --> $DIR/keyword-break-as-identifier.rs:4:9
   |
LL |     let break = "foo";
   |         ^^^^^ expected pattern

error: aborting due to previous error

